2009-12-03  John W. Eaton  <jwe@octave.org>

	* Makefile.am (BUILT_NODISTFILES): New variable.

2009-12-01  Jaroslav Hajek  <highegg@gmail.com>

	* idx-vector.cc (idx_vector::idx_range_rep::unconvert,
	idx_vector::idx_scalar_rep::unconvert,
	idx_vector::idx_vector_rep::unconvert,
	idx_vector::idx_mask_rep::unconvert): New methods.
	(idx_vector::unconvert): Use them here. Add mask output.
	* idx-vector.h: Update decls.

2009-11-28  Jaroslav Hajek  <highegg@gmail.com>

	* dim-vector.h (dim_vector::zero_by_zero): New method.
	* idx-vector.h (idx_vector::idx_mask_rep::is_colon_equiv): Fix.
	* Array.cc (Array<T>::assign): Minor tweaks. Optimize 
	A = []; A(1:m,1:n,1:k) = X for all cases. Use a shallow copy
	for all colon-equivalent indices.

2009-11-27  Jaroslav Hajek  <highegg@gmail.com>

	* idx-vector.h (idx_vector::index_class): New member: class_mask.
	(idx_vector::idx_mask_rep): New class.
	(idx_vector::idx_vector (bool)): Construct idx_mask_rep.
	(idx_vector::unmask): New method decl.
	* idx-vector.cc (idx_vector::idx_vector (const boolNDArray&)):
	Construct idx_mask_rep conditionally.
	(idx_vector::unmask): New method.
	(idx_vector::unconvert): Make non-const. unmask when called on a mask
	vector.
	(idx_vector::is_cont_range): Check also for idx_mask_rep.

2009-11-27  Jaroslav Hajek  <highegg@gmail.com>

	* Array.cc (Array<T>::nnz): New method.
	* Array.h: Declare it.
	* MArray.h (MArray<T>::nnz): Remove.
	* MArrayN.h (MArrayN<T>::nnz): Remove.
	* boolNDArray.h (boolNDArray::nnz): Remove.

2009-11-25  Jaroslav Hajek  <highegg@gmail.com>

	* dbleCHOL.cc (CHOL::init): Output LAPACK's info. Resize matrix if
	nonzero. Use smarter copying.
	* floatCHOL.cc (FloatCHOL::init): Ditto.
	* CmplxCHOL.cc (ComplexCHOL::init): Ditto.
	* fCmplxCHOL.cc (FloatComplexCHOL::init): Ditto.

2009-11-24  Jaroslav Hajek  <highegg@gmail.com>

	* MArrayN.cc (MArrayN::idx_add): New methods.
	* MArrayN.h: Declare them.
	* MArray.cc, MArray.h: Remove from here.
