@@ -56,7 +56,7 @@ nan_descending_compare (float x, float y)
 }
 
 Array<float>::compare_fcn_type
-sortrows_comparator (sortmode mode, const Array<float>& a , bool allow_chk)
+safe_comparator (sortmode mode, const Array<float>& a , bool allow_chk)
 {
   Array<float>::compare_fcn_type result = 0;
 
